move blind text to own file

--- a/printer/chatPrinter.tex
+++ b/printer/chatPrinter.tex
@@ -108,42 +108,6 @@
 		\thispagestyle{plain}
 		\tableofcontents
 		\clearpage		
-		\newyear{2013}
-		\newday{Mittwoch, 11. Dezember}
-		\leftMsg{Ramona}{13:37}{\blindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{ok}
-		\rightMsg{Michi}{13:37}{bli bla blubb}
-		\rightMsg{Michi}{13:37}{bli bla blubbibidi blubb blubb}
-		\leftMsg{Ramona}{13:37}{ok}
-		\leftMsg{Ramona}{13:37}{bli bla blubb}
-		\leftMsg{Ramona}{13:37}{bli bla blubbibidi blubb blubb}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\newday{Donnerstag, 12. Dezember}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\newday{Samstag, 44. Dezember}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\newday{Sonntag, 45. Dezember}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\newyear{2014}
-		\newday{Freitag, 13. Januar}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
+		\include{sample_data}
 	\end{multicols}
 \end{document}
