add sections (year/date) format

--- a/printer/blindtext_messages.tex
+++ b/printer/blindtext_messages.tex
@@ -1,5 +1,6 @@
 		\newyear{2013}
 		\newday{Mittwoch, 11. Dezember}
+		\centerMsg{13:37}{asd0asdßuva9sdfas 9a8s dfa9s8df09asd8  asd90f8a sdf08as df}
 		\leftMsg{Ramona}{13:37}{\blindtext}
 		\rightMsg{Michi}{13:37}{\shortblindtext}
 		\leftMsg{Ramona}{13:37}{\shortblindtext}
@@ -23,11 +24,12 @@
 		\leftMsg{Ramona}{13:37}{\shortblindtext}
 		\rightMsg{Michi}{13:37}{\shortblindtext}
 		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
+		\centerMsg{13:37}{\shortblindtext}
 		\newday{Sonntag, 45. Dezember}
 		\leftMsg{Ramona}{13:37}{\shortblindtext}
 		\rightMsg{Michi}{13:37}{\shortblindtext}
 		\leftMsg{Ramona}{13:37}{\shortblindtext}
+		\centerMsg{13:37}{short}
 		\rightMsg{Michi}{13:37}{\shortblindtext}
 		\newyear{2014}
 		\newday{Freitag, 13. Januar}
