--- a/printer/sample_data.tex
+++ b/printer/sample_data.tex
@@ -17,5 +17,6 @@ labore? :D}
 \leftMsg{John}{09:51}{duo dolores et ea rebum. 😊}
 \newday{Samstag, 9. September}
 \leftMsg{John}{10:45}{gubergren, no sea }
-\rightMsg{Sarah}{10:45}{\textless Sarah hat die Dateien 2913420.jpg, 29133420.jpg gesendet.\textgreater }
+\centerMsg{10:45}{\textless Sarah hat die Dateien 2913420.jpg, 29133420.jpg gesendet.\textgreater }
+\centerMsg{10:45}{Sarah hat die}
 \rightMsg{Sarah}{12:09}{At vero eos et}
