make final changes before publishing

--- a/printer/blindtext_messages.tex
+++ b/printer/blindtext_messages.tex
@@ -1,39 +1,33 @@
 		\newyear{2013}
 		\newday{Mittwoch, 11. Dezember}
-		\centerMsg{13:37}{asd0asdßuva9sdfas 9a8s dfa9s8df09asd8  asd90f8a sdf08as df}
-		\leftMsg{Ramona}{13:37}{\blindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{ok}
-		\rightMsg{Michi}{13:37}{bli bla blubb}
-		\rightMsg{Michi}{13:37}{bli bla blubbibidi \shorthandoff{"} blubb blubb}
-		\leftMsg{Ramona}{13:37}{ok}
-		\leftMsg{Ramona}{13:37}{bli bla blubb}
-		\leftMsg{Ramona}{13:37}{bli bla blubbibidi blubb blubb}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
+		\leftMsg{Sarah}{13:37}{\blindtext}
+		\rightMsg{John}{13:37}{\shortblindtext}
+		\leftMsg{Sarah}{13:37}{\shortblindtext}
+		\rightMsg{John}{13:37}{\shortblindtext}
+		\leftMsg{Sarah}{13:37}{\shortblindtext}
+		\rightMsg{John}{13:37}{\shortblindtext}
+		\leftMsg{Sarah}{13:37}{\shortblindtext}
+		\rightMsg{John}{13:37}{ok}
+		\rightMsg{John}{13:37}{\shortblindtext}
 		\newday{Donnerstag, 12. Dezember}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
+		\leftMsg{Sarah}{13:37}{\shortblindtext}
+		\rightMsg{John}{13:37}{\shortblindtext}
+		\leftMsg{Sarah}{13:37}{\shortblindtext}
+		\rightMsg{John}{13:37}{\shortblindtext}
 		\newday{Samstag, 44. Dezember}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
+		\leftMsg{Sarah}{13:37}{\shortblindtext}
+		\rightMsg{John}{13:37}{\shortblindtext}
+		\leftMsg{Sarah}{13:37}{\shortblindtext}
 		\centerMsg{13:37}{\shortblindtext}
 		\newday{Sonntag, 45. Dezember}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
+		\leftMsg{Sarah}{13:37}{\shortblindtext}
+		\rightMsg{John}{13:37}{\shortblindtext}
+		\leftMsg{Sarah}{13:37}{\shortblindtext}
 		\centerMsg{13:37}{short}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
+		\rightMsg{John}{13:37}{\shortblindtext}
 		\newyear{2014}
 		\newday{Freitag, 13. Januar}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
-		\leftMsg{Ramona}{13:37}{\shortblindtext}
-		\rightMsg{Michi}{13:37}{\shortblindtext}
+		\leftMsg{Sarah}{13:37}{\shortblindtext}
+		\rightMsg{John}{13:37}{\shortblindtext}
+		\leftMsg{Sarah}{13:37}{\shortblindtext}
+		\rightMsg{John}{13:37}{\shortblindtext}
